fix org visibility

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -130,3 +130,12 @@ div.search-bar{
     border: solid 1pt silver;
     opacity: 1;
 }
+
+small{
+    display: block;
+    font-size: .5em;
+    color: #999999;
+}
+.hidden{
+    display: none;
+}
